--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -38,8 +38,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-message">
-                    <h1>Landing Page</h1>
-                    <h3>A Template by Start Bootstrap</h3>
+                    <h1>Theory of Constraints Calculator</h1>
+                    <h3><%= link_to 'Get Started...', controller: 'projects' %></h3>
                     <hr class="intro-divider">
                     <ul class="list-inline intro-social-buttons">
                         <li>
