--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -72,6 +72,19 @@
 	<div class='container'>
   	  <h2>Add a task:</h2>
 	  <%= form_for([@project, @project.tasks.build]) do |f| %>
+	  <% if @project.tasks.build.errors.any? %>
+	      <div id="error_explanation">
+	        <h2>
+	          <%= pluralize(@project.tasks.build.errors.count, "error") %> prohibited
+	          this task from being saved:
+	        </h2>
+	        <ul>
+	          <% @project.tasks.build.errors.full_messages.each do |msg| %>
+	            <li><%= msg %></li>
+	          <% end %>
+	        </ul>
+	      </div>
+	    <% end %>
 	  <div class='form-group'>
     	  <%= f.label :description %><br>
     	  <%= f.text_field :description %>
