--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -25,7 +25,7 @@
 				</tr>
 				<tr>
 					<td>Predicted Duration</td>
-					<td><%= @project.predicted_duration %></td>
+					<td><%= number_with_precision(@project.predicted_duration, precision: 1) %></td>
 				</tr>
 			</tbody>
 		</table>
@@ -56,7 +56,7 @@
 					<td><%= task.max_duration %></td>
 					<td><%= task.toc_factor %></td>
 					<td><%= task.due_date %></td>
-					<td></td>
+					<td><%= task.completed %></td>
 					<td><%= link_to 'Edit', edit_project_task_path(task) %></td>
 					<td><%= link_to 'Delete', project_task_path(task),
 			                method: :delete,
@@ -75,11 +75,11 @@
 	  <% if @project.tasks.build.errors.any? %>
 	      <div id="error_explanation">
 	        <h2>
-	          <%= pluralize(@project.tasks.build.errors.count, "error") %> prohibited
+	          <%= pluralize(@project.task.build.errors.count, "error") %> prohibited
 	          this task from being saved:
 	        </h2>
 	        <ul>
-	          <% @project.tasks.build.errors.full_messages.each do |msg| %>
+	          <% @project.task.build.errors.full_messages.each do |msg| %>
 	            <li><%= msg %></li>
 	          <% end %>
 	        </ul>
@@ -90,12 +90,20 @@
     	  <%= f.text_field :description %>
 	  </div>
 	  <div class='form-group'>
-    	  <%= f.label :av_duration %><br>
+    	  <%= f.label 'Average Duration' %><br>
     	  <%= f.text_field :av_duration %>
 	  </div>
 	  <div class='form-group'>
-    	  <%= f.label :max_duration%><br>
+    	  <%= f.label 'Maximum Duration' %><br>
     	  <%= f.text_field :max_duration %>
+	  </div>
+	  <div class='form-group'>
+    	  <%= f.label :due_date %><br>
+    	  <%= f.date_field :due_date %>
+	  </div>
+	  <div class='form-group'>
+    	  <%= f.label :completed %><br>
+    	  <%= f.check_box :completed %>
 	  </div>
       <%= f.submit %>
 	  <% end %>
