Some style tidy up. Added Font-Awesome.

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,12 @@
-<h1 class='content-section-a'>New Project</h1>
-<%= render 'form' %>
-
-<%= link_to 'Back', projects_path %>
+<div class='content-section-a'>
+	<div class='container'>
+		<h1>New Project</h1>
+	</div>
+</div>
+<div class='content-section-b'>
+	<div class='container'>
+		<%= link_to '<-- Back', projects_path %>
+		<p></p>
+		<%= render 'form' %><br>	
+	</div>
+</div>
