--- a/app/views/projects/index.erb
+++ b/app/views/projects/index.erb
@@ -5,8 +5,11 @@
 </div>
 
 <div class='content-section-b'>
-	<div class='container'>		
-		<%= link_to 'New Project', new_project_path %></br>
+	<div class='container'>	
+		<%= link_to new_project_path, class: "btn btn-primary" do %>
+								<i class="glyphicon glyphicon-plus"></i> New Project
+								<% end %>	
+		<p></p>
 
 		<table class='table'>
 			<tbody>	
@@ -18,21 +21,24 @@
 					<th>Predicted Duration</th>
 					<th> </th>
 					<th> </th>
-					<th> </th>
   	  			</tr>
  
   	  			<% @projects.each do |project| %>
   	  			<tr>
-    				<td><%= project.title %></td>
+    				<td><%= link_to project.title, project_path(project) %></td>
     				<td><%= project.description %></td>
 					<td><%= project.min_duration %></td>
 					<td><%= project.max_duration %></td>
-					<td><%= project.predicted_duration %></td>
-    				<td><%= link_to 'Show', project_path(project) %></td>
-					<td><%= link_to 'Edit', edit_project_path(project) %></td>
-					<td><%= link_to 'Destroy', project_path(project),
+					<td><%= number_with_precision(project.predicted_duration, precision: 1) %></td>
+					<td><%= link_to edit_project_path(project), class: "btn btn-primary" do %>
+						<i class="glyphicon glyphicon-edit"></i>
+						<% end %></td>
+					<td><%= link_to project_path(project),
 	                				method: :delete,
-	                				data: { confirm: 'Are you sure?' } %></td>
+	                				data: { confirm: 'Are you sure you want to delete this? (Cannot be undone)' },
+									class: "btn btn-danger" do %>
+									<i class="glyphicon glyphicon-trash"></i>
+						<% end %></td>
     			</tr>
   	  			<% end %>
 			</tbody>
