--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -57,10 +57,15 @@
 					<td><%= task.toc_factor %></td>
 					<td><%= task.due_date %></td>
 					<td><%= task.completed %></td>
-					<td><%= link_to 'Edit', edit_project_task_path(task) %></td>
-					<td><%= link_to 'Delete', project_task_path(task),
-			                method: :delete,
-			                data: { confirm: 'Are you sure?' } %></td>
+					<td><%= link_to edit_project_task_path(task), class: "btn btn-primary" do %>
+						<i class="glyphicon glyphicon-edit"></i>
+						<% end %></td>
+					<td><%= link_to project_task_path(task),
+	                				method: :delete,
+	                				data: { confirm: 'Are you sure you want to delete this? (Cannot be undone)' },
+									class: "btn btn-danger" do %>
+									<i class="glyphicon glyphicon-trash"></i>
+									<% end %>
 				</tr>
 				<% end %>
 			</tbody>
