--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -29,7 +29,9 @@
 				</tr>
 			</tbody>
 		</table>
-		<%= link_to 'Edit this Project', edit_project_path(@project) %><br>
+		<%= link_to edit_project_path(@project) do %>
+		<%= icon('edit')%> Edit this Project
+		<% end %><br>
 	</div>
 </div>
 
@@ -57,14 +59,13 @@
 					<td><%= task.toc_factor %></td>
 					<td><%= task.due_date %></td>
 					<td><%= task.completed %></td>
-					<td><%= link_to edit_project_task_path(task), class: "btn btn-primary" do %>
-						<i class="glyphicon glyphicon-edit"></i>
+					<td><%= link_to edit_project_task_path(task) do %>
+						<%= icon('edit')%>
 						<% end %></td>
 					<td><%= link_to project_task_path(task),
 	                				method: :delete,
-	                				data: { confirm: 'Are you sure you want to delete this? (Cannot be undone)' },
-									class: "btn btn-danger" do %>
-									<i class="glyphicon glyphicon-trash"></i>
+	                				data: { confirm: 'Are you sure you want to delete this? (Cannot be undone)' } do %>
+									<%= icon('trash')%>
 									<% end %>
 				</tr>
 				<% end %>
