--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -38,7 +38,7 @@
 <div class='content-section-a'>
 	<div class='container'>
 		<h2>Tasks for <%= @project.title %></h2>
-		<table class='table'>
+		<table class='table table-striped' id='sortable'>
 			<tbody>
 				<tr>
 					<th>Description</th>
@@ -48,20 +48,18 @@
 					<th>Due Date</th>
 					<th>Complete?</th>
 					<th></th>
-					<th></th>
 				</tr>
 
 				<% @project.tasks.each do |task| %>
 				<tr>
-					<td><%= task.description %></td>
+					<td><%= link_to edit_project_task_path(task) do %>
+						<%= task.description %>
+						<% end %></td>
 					<td><%= task.av_duration %></td>
 					<td><%= task.max_duration %></td>
 					<td><%= task.toc_factor %></td>
 					<td><%= task.due_date %></td>
-					<td><%= task.completed %></td>
-					<td><%= link_to edit_project_task_path(task) do %>
-						<%= icon('edit')%>
-						<% end %></td>
+					<td><%= task.completed.yesno %></td>
 					<td><%= link_to project_task_path(task),
 	                				method: :delete,
 	                				data: { confirm: 'Are you sure you want to delete this? (Cannot be undone)' } do %>
